# sqlalchemy-aws

./: .gitignore  Makefile  main.py  pyproject.toml
.github/workflows/: ci.yml
sqla/: log.py
sqla/dynamodb/: dbapi.py  dialect.py  utils.py
tests/: test_dynamo.py
