[project]
name = "sqla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.25",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "types-boto3[dynamodb]>=1.38.25",
]

[dependency-groups]
dev = ["awscli-local>=0.22.0", "mypy>=1.15.0", "ruff>=0.11.11"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
